--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "now": "^6.4.1",
     "postcss-loader": "1.3.3",
     "sass-loader": "6.0.3",
-    "webpack": "2.2.1"
+    "webpack": "2.2.1",
+    "deep-extend": ">=0.5.1"
   }
 }
